# paygap

./: .gitignore  README.md  pyproject.toml
configs/: DATASET_REGISTRY.csv  datasets.yaml  onet_index_recipe.yaml  repro_extension.yaml  repro_output_schemas.json  variance_addon.yaml  variance_output_schemas.json
docs/: faq.html  heterogeneity.html  index.html  mechanisms.html  methods.html  occupations.html  reproductive.html  trends.html  variance.html
reports/: README.md  acs_family_rebuild_review.md  acs_selection_robustness.md  atus_repro_mechanisms.md  atus_variance_mechanisms.md  context_data_status.md  defensibility_report.md  final_synthesis.md  findings_summary.md  m6_time_use_bridge.md  method_comparison.md  nlsy_deep_dive.md  oaxaca_review.md  oaxaca_sensitivity.md  psid_panel_validation.md  psid_validation.md  repro_inventory_usage.md  robustness_appendix.md  sce_public_analysis.md  sce_subgroup_analysis.md  sce_supplement.md  selection_robustness.md  sipp_models.md  sipp_snapshot.md  sipp_validation.md  variance_addon_summary.md  variance_inventory_usage.md
results/: README.md
scripts/: acquire_acs_repweights.py  backfill_acs_esr.py  backfill_acs_family_vars.py  backfill_acs_repro_vars.py  build_acs_selection_artifacts.py  build_acs_selection_outputs.py  build_acs_uncertainty_summary.py  build_consolidated_trend_charts.py  build_context_status.py  build_cps_selection_artifacts.py  build_cps_selection_outputs.py  build_defensibility_report.py  build_final_synthesis.py  build_m6_time_use_bridge.py  build_method_comparison.py  build_nlsy_deep_dive.py  (+23 more)
(+352 files in other folders)
