[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gender-gap"
version = "0.1.0"
description = "U.S. male/female earnings gap estimation using free public data"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "catboost>=1.2",
    "lightgbm>=4.0",
    "doubleml>=0.7",
    "pyreadstat>=1.2",
    "pydantic>=2.5",
    "requests>=2.31",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
gender-gap = "gender_gap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gender_gap"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
cache_dir = "/tmp/paygap-pytest-cache"
